--- a/index.html
+++ b/index.html
@@ -1,118 +1,155 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slideshow Responsivo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f4f4f4;
-        }
-        .slideshow-container {
-            max-width: 100%;
-            width: 90%;
-            position: relative;
-            margin: auto;
-            overflow: hidden;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .slides {
-            display: none;
-            position: relative;
-        }
-        .slides img {
-            width: 100%;
-            border-radius: 10px;
-            height: auto;
-        }
-        .caption {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: rgba(0, 0, 0, 0.7);
-            color: #fff;
-            padding: 10px 20px;
-            border-radius: 5px;
-            font-size: 14px;
-            text-align: center;
-        }
-        .prev, .next {
-            cursor: pointer;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background: rgba(0, 0, 0, 0.5);
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 50%;
-            font-size: 18px;
-            user-select: none;
-        }
-        .prev {
-            left: 10px;
-        }
-        .next {
-            right: 10px;
-        }
-        .prev:hover, .next:hover {
-            background: rgba(0, 0, 0, 0.8);
-        }
-        @media (max-width: 600px) {
-            .caption {
-                font-size: 12px;
-                padding: 8px 15px;
-            }
-            .prev, .next {
-                font-size: 16px;
-                padding: 8px;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Noite VG</title>
+  <style>
+    /* Estilos CSS */
+    body, html {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+    }
+
+    .container {
+      max-width: 100%;
+      margin: 0 auto;
+    }
+
+    header {
+      text-align: center;
+      background: #4caf50;
+      color: white;
+      padding: 10px 0;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
+
+    .slideshow {
+      position: relative;
+      max-width: 300px;
+      overflow: hidden;
+    }
+
+    .slides {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .slide {
+      min-width: 100%;
+      text-align: center;
+    }
+
+    .slide img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+
+    .caption {
+      font-size: 14px;
+      margin-top: 5px;
+      color: #333;
+    }
+
+    button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      border-radius: 50%;
+    }
+
+    button:hover {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    button.prev {
+      left: 10px;
+    }
+
+    button.next {
+      right: 10px;
+    }
+
+    /* Responsivo para telas menores */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 20px;
+      }
+
+      .caption {
+        font-size: 12px;
+      }
+
+      button {
+        padding: 8px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="slideshow-container">
+  <div class="container">
+    <header>
+      <h1 id="main-title">Porque a Gabi tem que vir em casa hoje</h1>
+    </header>
+    <main class="content">
+      <div class="slideshow">
         <div class="slides">
-            <img src="https://via.placeholder.com/600x400" alt="Slide 1">
-            <div class="caption">Texto para a legenda da imagem 1</div>
+          <div class="slide">
+            <img src="https://st.depositphotos.com/1006318/4356/i/950/depositphotos_43564491-stock-photo-couple-eating-hotdog-together-against.jpg" alt="Imagem 1">
+            <p class="caption">Já compramos as coisas para fazer um cachorro quente bem gostoso hoje 🥰🥰🥰</p>
+          </div>
+          <div class="slide">
+            <img src="https://img.freepik.com/fotos-premium/casal-deitado-no-sofa-e-assistindo-a-um-filme_23-2147718290.jpg?w=1480" alt="Imagem 2">
+            <p class="caption">Nada melhor que assistir um filminho junto e em casa, todo mundo concorda ne? 👩‍❤️‍💋‍👨👩‍❤️‍💋‍👨</p>
+          </div>
+          <div class="slide">
+            <img src="image/nos.jpg" alt="Imagem 3">
+            <p class="caption">Eu sou tranquilo e vou cuidar bem dela, queremos só ficar um tempinho gostoso juntos ❤❤</p>
+          </div>
         </div>
-        <div class="slides">
-            <img src="https://via.placeholder.com/600x400?text=Slide+2" alt="Slide 2">
-            <div class="caption">Texto para a legenda da imagem 2</div>
-        </div>
-        <div class="slides">
-            <img src="https://via.placeholder.com/600x400?text=Slide+3" alt="Slide 3">
-            <div class="caption">Texto para a legenda da imagem 3</div>
-        </div>
-        <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
-        <button class="next" onclick="changeSlide(1)">&#10095;</button>
-    </div>
+        <button class="prev" onclick="changeSlide(-1)">❮</button>
+        <button class="next" onclick="changeSlide(1)">❯</button>
+      </div>
+    </main>
+  </div>
+  <script>
+    // JavaScript
+    let currentSlide = 0;
 
-    <script>
-        let currentSlide = 0;
-        const slides = document.querySelectorAll('.slides');
+    function showSlide(index) {
+      const slides = document.querySelectorAll('.slide');
+      const totalSlides = slides.length;
 
-        function showSlide(index) {
-            slides.forEach((slide, i) => {
-                slide.style.display = (i === index) ? 'block' : 'none';
-            });
-        }
+      currentSlide = (index + totalSlides) % totalSlides; // Loop entre slides
+      const offset = -currentSlide * 100; // Calcula o deslocamento
+      document.querySelector('.slides').style.transform = `translateX(${offset}%)`;
+    }
 
-        function changeSlide(step) {
-            currentSlide = (currentSlide + step + slides.length) % slides.length;
-            showSlide(currentSlide);
-        }
+    function changeSlide(step) {
+      showSlide(currentSlide + step);
+    }
 
-        // Inicializa o slideshow
-        showSlide(currentSlide);
-    </script>
+    // Mostra o primeiro slide ao carregar a página
+    showSlide(0);
+  </script>
 </body>
 </html>
